; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_user.c_utf8_or_nothing.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_user.c_utf8_or_nothing.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32*)* @utf8_or_nothing to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @utf8_or_nothing(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %10, label %21

10:                                               ; preds = %2
  %11 = load i8*, i8** %4, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i32* @svn_utf_cstring_to_utf8(i8** %6, i8* %11, i32* %12)
  store i32* %13, i32** %7, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %18, label %16

16:                                               ; preds = %10
  %17 = load i8*, i8** %6, align 8
  store i8* %17, i8** %3, align 8
  br label %22

18:                                               ; preds = %10
  %19 = load i32*, i32** %7, align 8
  %20 = call i32 @svn_error_clear(i32* %19)
  br label %21

21:                                               ; preds = %18, %2
  store i8* null, i8** %3, align 8
  br label %22

22:                                               ; preds = %21, %16
  %23 = load i8*, i8** %3, align 8
  ret i8* %23
}

declare dso_local i32* @svn_utf_cstring_to_utf8(i8**, i8*, i32*) #1

declare dso_local i32 @svn_error_clear(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
